--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,18 @@ config.yml
 .DS_Store
 1
 .trash
+*.bak
 
 # Local dev files
 custom-bpmn-rules
+bpmnlint-runner/lint-report.*
 bpmnlint-runner/node_modules/
 bpmnlint-runner/bp3-dynamic-rules/node_modules/
 bpmnlint-runner/bp3-dynamic-rules/rules/*.js
-bpmnlint-runner/lint-report.*
+dmnlint-runner/lint-report.*
+dmnlint-runner/node_modules/
+dmnlint-runner/bp3-dynamic-rules/node_modules/
+dmnlint-runner/bp3-dynamic-rules/rules/*.js
 
 # Distribution / packaging
 build/
@@ -40,11 +45,11 @@ venv.bak/
 # bpmn files
 *.bpmn
 *.form
-.bpmnlintrc
+.bpmnlintrc*
 
 # dmn files
 *.dmn
-.dmnlintrc
+.dmnlintrc*
 
 /node_modules/
 /package.json
