Added check style alike packages and baseline rules like 2 spaces per indentation. Also fixed an unusued variable.

--- a/bpmnlint-runner/bp3-dynamic-rules/package.json
+++ b/bpmnlint-runner/bp3-dynamic-rules/package.json
@@ -7,6 +7,10 @@
     "bpmnlint",
     "plugin"
   ],
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
   "dependencies": {
     "bpmnlint": "^11.6.0",
     "bpmnlint-utils": "^1.1.1",
@@ -15,5 +19,12 @@
   "files": [
     "rules",
     "index.js"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
+    "prettier": "^3.6.2"
+  }
 }
