--- a/dmnlint-runner/bp3-dynamic-rules/package.json
+++ b/dmnlint-runner/bp3-dynamic-rules/package.json
@@ -7,6 +7,10 @@
     "dmnlint",
     "plugin"
   ],
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
   "dependencies": {
     "dmnlint": "^0.2.0",
     "dmnlint-utils": "^0.1.0"
@@ -14,5 +18,12 @@
   "files": [
     "rules",
     "index.js"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
+    "prettier": "^3.6.2"
+  }
 }
