--- a/dmnlint-runner/package.json
+++ b/dmnlint-runner/package.json
@@ -1,1 +1,45 @@
-{"name":"dmnlint-runner","version":"0.0.1","description":"A simple runner for dmnlint in order to better integrate with CI/CD pipelines and have custom reporting beyond the console","license":"MIT","author":"Filipe Pereira","type":"commonjs","main":"dmnlint-runner.js","bin":{"dmn-linter":"./dmnlint-runner.js"},"scripts":{"start":"node ./dmnlint-runner.js","format":"prettier --write .","test":"echo \"Error: no test specified\" && exit 1"},"dependencies":{"bp3-dynamic-rules":"file:bp3-dynamic-rules","chalk":"^4.1.2","cli-table3":"^0.6.5","dmn-moddle":"^11.0.0","dmnlint":"^0.2.0","dmnlint-plugin-bp3-dynamic-rules":"npm:bp3-dynamic-rules","dmnlint-utils":"^0.1.0","junit-report-builder":"^5.1.1","tiny-glob":"^0.2.9","yargs":"^18.0.0"},"keywords":[],"files":["dmnlint-runner.js"],"engines":{"node":">=20"}}
+{
+    "name": "dmnlint-runner",
+    "version": "0.0.1",
+    "description": "A simple runner for dmnlint in order to better integrate with CI/CD pipelines and have custom reporting beyond the console",
+    "license": "MIT",
+    "author": "Filipe Pereira",
+    "type": "commonjs",
+    "main": "dmnlint-runner.js",
+    "bin": {
+        "dmn-linter": "./dmnlint-runner.js"
+    },
+    "scripts": {
+        "start": "node ./dmnlint-runner.js",
+        "format": "prettier --write .",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
+    },
+    "dependencies": {
+        "bp3-dynamic-rules": "file:bp3-dynamic-rules",
+        "chalk": "^4.1.2",
+        "cli-table3": "^0.6.5",
+        "dmn-moddle": "^11.0.0",
+        "dmnlint": "^0.2.0",
+        "dmnlint-plugin-bp3-dynamic-rules": "npm:bp3-dynamic-rules",
+        "dmnlint-utils": "^0.1.0",
+        "junit-report-builder": "^5.1.1",
+        "tiny-glob": "^0.2.9",
+        "yargs": "^18.0.0"
+    },
+    "keywords": [],
+    "files": [
+        "dmnlint-runner.js"
+    ],
+    "engines": {
+        "node": ">=20"
+    },
+    "devDependencies": {
+        "eslint": "^9.36.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "globals": "^16.4.0",
+        "prettier": "^3.6.2"
+    }
+}
