Updates to the dockerfile and .dockerignore for the lint runner and sbom generation and some layer optimization

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,20 @@
-*
-!docker-entrypoint.sh
-!/scripts
+.trash
+.github
+*mnfiles/
+custom-*mn-rules/
+node_modules/
+.*mnlintrc*
+*.*mn
+*.bak
+*.md
+outputfiles/
+reportfiles/
+tmp/
+*mnlint-runner/rules/
+*mnlint-runner/bp*rules/rules/*
+*mnlint-runner/node_modules/
+*mnlint-runner/.*mnlintrc*
+*mnlint-runner/.trash/
+*mnlint-runner/custom*rules/
+*mnlint-runner/*.*mn
+*mnlint-runner/*.md
