--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,21 @@ config.json
 config.yml
 .DS_Store
 1
+.trash
+*.bak
+
+
+# Local dev files
+custom-bpmn-rules
+custom-dmn-rules
+bpmnlint-runner/lint-report.*
+bpmnlint-runner/node_modules/
+bpmnlint-runner/bp3-dynamic-rules/node_modules/
+bpmnlint-runner/bp3-dynamic-rules/rules/*.js
+dmnlint-runner/lint-report.*
+dmnlint-runner/node_modules/
+dmnlint-runner/bp3-dynamic-rules/node_modules/
+dmnlint-runner/bp3-dynamic-rules/rules/*.js
 
 # Distribution / packaging
 build/
@@ -32,14 +47,11 @@ venv.bak/
 # bpmn files
 *.bpmn
 *.form
-.bpmnlintrc
+.bpmnlintrc*
 
 # dmn files
 *.dmn
-.dmnlintrc
+.dmnlintrc*
 
 /node_modules/
-/package.json
-/package-lock.json
 packages.txt
-
