--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Find previous image tagged with branch name - and delete it
         run: |
+          echo "project-name=${{ inputs.project-name }}"
+          echo "image-name=${{ inputs.image-name }}"
           id=$(curl -s -L \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
