--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -36,10 +36,11 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions" 
+            "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions)" 
             #\
             #  | jq -r ".[] | select(.metadata.container.tags | index(\"${{ inputs.branch-name }}\")) | .id")
           echo "$id"
+          exit 1
           if [ "$id" != "" ]; then
             # First call is just to see the result
             curl -s -L \
