--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -30,31 +30,31 @@ jobs:
           username: ${{ inputs.username }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Find previous image tagged with branch name - and delete it
-        run: |
-          id=$(curl -s -L \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions") 
-            #\
-            #  | jq -r ".[] | select(.metadata.container.tags | index(\"${{ inputs.branch-name }}\")) | .id")
-          echo "$id"
-          exit 1
-          if [ "$id" != "" ]; then
-            # First call is just to see the result
-            curl -s -L \
-              -H "Accept: application/vnd.github+json" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-              "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions/$id"
-            # Second call does the actual delete
-            curl -s -L -X DELETE \
-              -H "Accept: application/vnd.github+json" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-              "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions/$id"
-          fi
+      # - name: Find previous image tagged with branch name - and delete it
+      #   run: |
+      #     id=$(curl -s -L \
+      #       -H "Accept: application/vnd.github+json" \
+      #       -H "X-GitHub-Api-Version: 2022-11-28" \
+      #       -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+      #       "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions") 
+      #       #\
+      #       #  | jq -r ".[] | select(.metadata.container.tags | index(\"${{ inputs.branch-name }}\")) | .id")
+      #     echo "$id"
+      #     exit 1
+      #     if [ "$id" != "" ]; then
+      #       # First call is just to see the result
+      #       curl -s -L \
+      #         -H "Accept: application/vnd.github+json" \
+      #         -H "X-GitHub-Api-Version: 2022-11-28" \
+      #         -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+      #         "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions/$id"
+      #       # Second call does the actual delete
+      #       curl -s -L -X DELETE \
+      #         -H "Accept: application/vnd.github+json" \
+      #         -H "X-GitHub-Api-Version: 2022-11-28" \
+      #         -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+      #         "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions/$id"
+      #     fi
 
       - name: Build Docker image of application, tag with branch name
         run: |
