--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -19,23 +19,23 @@ jobs:
       branch-name: ${{ github.head_ref || github.ref_name }}
     secrets: inherit
 
-# add at a later date ?
+# TODO: add at a later date
   # VULNERABILITY SCANNING
-  vulnerability-scan:
-    name: Run vulnerability scan
-    runs-on: ubuntu-latest
-    needs: call-workflow-build-image
-    steps:
-      - name: Get image from repository
-        run: |
-          docker pull $GITHUB_IMAGE_NAME:${{ github.head_ref || github.ref_name }}
+#   vulnerability-scan:
+#     name: Run vulnerability scan
+#     runs-on: ubuntu-latest
+#     needs: call-workflow-build-image
+#     steps:
+#       - name: Get image from repository
+#         run: |
+#           docker pull $GITHUB_IMAGE_NAME:${{ github.head_ref || github.ref_name }}
 
-      - name: Scan image for vulnerabilities with Trivy
-        uses: aquasecurity/trivy-action@0.33.1
-        with:
-          image-ref: ${{ format('{0}:{1}', env.GITHUB_IMAGE_NAME, github.head_ref || github.ref_name) }}
-          format: 'table'
-          # Fail the build if any 'fixed' and HIGH or CRITICAL severity vulnerabilities are found.
-          exit-code: '1'
-          ignore-unfixed: true
-          severity: 'HIGH,CRITICAL'
+#       - name: Scan image for vulnerabilities with Trivy
+#         uses: aquasecurity/trivy-action@0.33.1
+#         with:
+#           image-ref: ${{ format('{0}:{1}', env.GITHUB_IMAGE_NAME, github.head_ref || github.ref_name) }}
+#           format: 'table'
+#           # Fail the build if any 'fixed' and HIGH or CRITICAL severity vulnerabilities are found.
+#           exit-code: '1'
+#           ignore-unfixed: true
+#           severity: 'HIGH,CRITICAL'
