--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -36,7 +36,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions" \
+            "https://api.github.com/orgs/bp3/packages/container/${{ inputs.project-name }}/versions" \
               | jq -r ".[] | select(.metadata.container.tags | index(\"${{ inputs.branch-name }}\")) | .id")
           if [ "$id" != "" ]; then
             # First call is just to see the result
@@ -44,13 +44,13 @@ jobs:
               -H "Accept: application/vnd.github+json" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-              "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions/$id"
+              "https://api.github.com/orgs/bp3/packages/container/${{ inputs.project-name }}/versions/$id"
             # Second call does the actual delete
             curl -s -L -X DELETE \
               -H "Accept: application/vnd.github+json" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-              "https://api.github.com/orgs/bp3/packages/container/camunda-lint/versions/$id"
+              "https://api.github.com/orgs/bp3/packages/container/${{ inputs.project-name }}/versions/$id"
           fi
 
       - name: Build Docker image of application, tag with branch name
