--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -9,6 +9,9 @@ on:
       project-name:
         required: true
         type: string
+      org-name:
+        required: true
+        type: string
       image-name:
         required: true
         type: string
@@ -32,25 +35,33 @@ jobs:
 
       - name: Find previous image tagged with branch name - and delete it
         run: |
-          id=$(curl -s -L  \
+          json_response=$(curl -s -L  \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/orgs/bp3/packages/container/${{ inputs.project-name }}/versions" \
-              | jq -r ".[] | select(.metadata.container.tags | index(\"${{ inputs.branch-name }}\")) | .id")
+            "https://api.github.com/orgs/${{ inputs.org-name }}/packages/container/${{ inputs.project-name }}/versions")
+
+          status=$(echo "${json_response}" | jq -r '.status // ""')
+
+          if [ "${status}" = "404" ]; then
+            exit 0
+          fi
+
+          id=$(echo "${json_response}" | jq -r ".[] | select(.metadata.container.tags | index(\"${{ inputs.branch-name }}\")) | .id")
+
           if [ "$id" != "" ]; then
             # First call is just to see the result
             curl -s -L \
               -H "Accept: application/vnd.github+json" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-              "https://api.github.com/orgs/bp3/packages/container/${{ inputs.project-name }}/versions/$id"
+              "https://api.github.com/orgs/${{ inputs.org-name }}/packages/container/${{ inputs.project-name }}/versions/$id"
             # Second call does the actual delete
             curl -s -L -X DELETE \
               -H "Accept: application/vnd.github+json" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-              "https://api.github.com/orgs/bp3/packages/container/${{ inputs.project-name }}/versions/$id"
+              "https://api.github.com/orgs/${{ inputs.org-name }}/packages/container/${{ inputs.project-name }}/versions/$id"
           fi
 
       - name: Build Docker image of application, tag with branch name
