--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -41,12 +41,15 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/orgs/${{ inputs.org-name }}/packages/container/${{ inputs.project-name }}/versions")
 
+          echo "json=${json_response}"
           status=$(echo "${json_response}" | jq -r '.status // ""')
-
+          
+          echo "status=${status}"
           if [ "${status}" = "404" ]; then
             exit 0
           fi
 
+          echo "json=${json_response}"
           id=$(echo "${json_response}" | jq -r ".[] | select(.metadata.container.tags | index(\"${{ inputs.branch-name }}\")) | .id")
 
           if [ "$id" != "" ]; then
