--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   call-workflow-build-image:
-    uses: ./.github/workflows/build-image.yaml
+    uses: ./.github/workflows/build-image.yml
     with:
       username: ${{ github.actor }}
       project-name:  'camunda-lint'
