--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   call-workflow-build-image:
-    uses: ./.github/workflows/build-image.yaml
+    uses: ./.github/workflows/build-image.yml
     with:
       username: ${{ github.actor }}
       project-name:  'camunda-lint'
