Separating the test image step into its own stage

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -75,6 +75,19 @@ jobs:
         run: |
           docker push ${{ inputs.image-name }}:${{ inputs.branch-name }}
 
-      - name: Test the image
+  test-image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ inputs.username }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run Smoke Test
         run: |
           docker run -i --rm -v ${PWD}/test/smoke-test:/project -e PROJECT_PATH=/project ${{ inputs.image-name }}:${{ inputs.branch-name }} lint
