fix typo for test-image.yml

--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -21,7 +21,7 @@ jobs:
       branch-name: ${{ github.head_ref || github.ref_name }}
     secrets: inherit
   call-workflow-test-image:
-    uses: ./.github/workflows/test-imag-yml
+    uses: ./.github/workflows/test-image.yml
     with:
       image-name: 'camunda-lint'
       branch-name: ${{ github.head_ref || github.ref_name }}
