--- a/.github/workflows/test-image.yml
+++ b/.github/workflows/test-image.yml
@@ -3,6 +3,9 @@ name: Build image
 on:
   workflow_call:
     inputs:
+      username:
+        required: true
+        type: string
       image-name:
         required: true
         type: string
@@ -16,6 +19,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ inputs.username }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Smoke Test
         run: |
