--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dmnlint-utils": "^0.1.0",
     "bpmn-moddle": "^9.0.3",
     "bpmnlint": "^11.6.0",
-    "bpmnlint-plugin-bp3global-bpmn-rules": "npm:@bp3global/bpmn-rules",
+    "bpmnlint-plugin-bp3global-bpmn-rules": "npm:@bp3global/bpmnlint-plugin-bpmn-rules",
     "bpmnlint-utils": "^1.1.1",
     "semver": "^7.7.2"
   },
