Removed the redundant console log in verbose mode and fixed the package json depedencies

--- a/dmnlint-runner/bp3-dynamic-rules/package.json
+++ b/dmnlint-runner/bp3-dynamic-rules/package.json
@@ -12,8 +12,8 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "dmnlint": "^0.2.0",
-    "dmnlint-utils": "^0.1.0"
+    "dmnlint": "*",
+    "dmnlint-utils": "*"
   },
   "files": [
     "rules",
