--- a/dmnlint-runner/package.json
+++ b/dmnlint-runner/package.json
@@ -20,10 +20,10 @@
         "bp3-dynamic-rules": "file:bp3-dynamic-rules",
         "chalk": "^4.1.2",
         "cli-table3": "^0.6.5",
-        "dmn-moddle": "^11.0.0",
-        "dmnlint": "^0.2.0",
+        "dmn-moddle": "*",
+        "dmnlint": "*",
         "dmnlint-plugin-bp3-dynamic-rules": "npm:bp3-dynamic-rules",
-        "dmnlint-utils": "^0.1.0",
+        "dmnlint-utils": "*",
         "junit-report-builder": "^5.1.1",
         "tiny-glob": "^0.2.9",
         "yargs": "^18.0.0"
