--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@BP3/bpmnlint-plugin-bpmn-rules": "npm:@BP3/bpmnlint-plugin-bpmn-rules@^0.0.3",
     "bpmn-moddle": "^9.0.3",
     "bpmnlint": "^11.6.0",
     "bpmnlint-plugin-bp3global-bpmn-rules": "npm:@BP3/bpmnlint-plugin-bpmn-rules",
