--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -71,7 +71,7 @@ jobs:
         run: |
           echo "image-name = ${{ inputs.image-name }}"
           echo "branch-name = ${{ inputs.branch-name}}"
-          docker build --secrets id=GH_TOKEN,env=NPM_TOKEN -t ${{ inputs.image-name }}:${{ inputs.branch-name }} .
+          docker build --secret id=GH_TOKEN,env=NPM_TOKEN -t ${{ inputs.image-name }}:${{ inputs.branch-name }} .
 
       - name: Push to local registry
         run: |
