--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -38,6 +38,9 @@ jobs:
         run: |
           npx @cyclonedx/cyclonedx-npm -o camunda-lint-sbom.json
 
+      - name: Show SBOM file content
+        run: cat camunda-lint-sbom.json
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
