fix: enhance smoke test by adding npmrc and GitHub token to Docker run command

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -96,4 +96,9 @@ jobs:
 
       - name: Run Smoke Test
         run: |
-          docker run -i --rm -v ${PWD}/test/smoke-test:/project -e PROJECT_PATH=/project ${{ inputs.image-name }}:${{ inputs.branch-name }} lint
+          docker run -i --rm \
+            -v ${PWD}/test/smoke-test:/project \
+            -v ${PWD}/.npmrc:/root/.npmrc \
+            -e PROJECT_PATH=/project \
+            -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
+            ${{ inputs.image-name }}:${{ inputs.branch-name }} lint
