fix: add GITHUB_TOKEN environment variable to smoke test Docker run command

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -99,4 +99,5 @@ jobs:
           docker run -i --rm \
             -v ${PWD}/test/smoke-test:/project \
             -e PROJECT_PATH=/project \
+            -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
             ${{ inputs.image-name }}:${{ inputs.branch-name }} lint
