chore: add steps to remove package-lock.json and install dependencies in build workflow

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -31,6 +31,14 @@ jobs:
         with:
           node-version: '22'
 
+      - name: Remove package-lock.json
+        run: |
+          rm -f package-lock.json
+
+      - name: Install dependencies
+        run: |
+          npm install
+
       - name: Generate SBOM
         run: |
           npx @cyclonedx/cyclonedx-npm -o camunda-lint-sbom.json
