--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -36,6 +36,8 @@ jobs:
           rm -f package-lock.json
 
       - name: Install dependencies
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm install
 
