feat: add SBOM test step to build image workflow

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -114,3 +114,7 @@ jobs:
       - name: Run Smoke Test
         run: |
           docker run -i --rm -v ${PWD}/test/smoke-test:/project -e PROJECT_PATH=/project ${{ inputs.image-name }}:${{ inputs.branch-name }} lint
+
+      - name: Run SBOM Test
+        run: |
+          docker run -i --rm ${{ inputs.image-name }}:${{ inputs.branch-name }} sbom
