--- a/.gitignore
+++ b/.gitignore
@@ -13,16 +13,11 @@ custom-*mn-rules
 outputfiles
 *.bak
 tmp/
+.vscode/
 
 # Local dev files
-bpmnlint-runner/lint-report.*
-bpmnlint-runner/node_modules/
-bpmnlint-runner/bp3-dynamic-rules/node_modules/
-bpmnlint-runner/bp3-dynamic-rules/rules/*.js
-dmnlint-runner/lint-report.*
-dmnlint-runner/node_modules/
-dmnlint-runner/bp3-dynamic-rules/node_modules/
-dmnlint-runner/bp3-dynamic-rules/rules/*.js
+lint-runner/lint-report.*
+lint-runner/bp3-dynamic-rules/rules/*.js
 
 # Distribution / packaging
 build/
@@ -54,5 +49,5 @@ venv.bak/
 *.dmn
 .dmnlintrc*
 
-/node_modules/
+node_modules/
 packages.txt
