--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -12,6 +12,9 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint:
+    uses: ./.github/workflows/lint.yml
+
   call-workflow-build-image:
     uses: ./.github/workflows/build-image.yml
     with:
