--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -14,6 +14,7 @@ jobs:
     uses: ./.github/workflows/lint.yml
 
   call-workflow-build-image:
+    needs: lint
     uses: ./.github/workflows/build-image.yml
     with:
       username: ${{ github.actor }}
