--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -16,6 +16,7 @@ jobs:
     uses: ./.github/workflows/lint.yml
 
   call-workflow-build-image:
+    needs: lint
     uses: ./.github/workflows/build-image.yml
     with:
       username: ${{ github.actor }}
