--- a/lint-runner/package.json
+++ b/lint-runner/package.json
@@ -28,18 +28,20 @@
     "dmnlint": "*",
     "dmnlint-plugin-bp3-dynamic-rules": "file:bp3-dynamic-rules",
     "dmnlint-utils": "*",
-    "chalk": "^4.1.2",
-    "cli-table3": "^0.6.5",
-    "junit-report-builder": "^5.1.1",
-    "tiny-glob": "^0.2.9",
-    "yargs": "^18.0.0"
+    "chalk": "*",
+    "cli-table3": "*",
+    "junit-report-builder": "*",
+    "tiny-glob": "*",
+    "yargs": "*",
+    "zeebe-bpmn-moddle": "*",
+    "bpmnlint-plugin-camunda-compat": "npm:bpmnlint-plugin-camunda-compat"
   },
   "devDependencies": {
-    "eslint": "^9.36.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.4.0",
-    "prettier": "^3.6.2"
+    "eslint": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-prettier": "*",
+    "globals": "*",
+    "prettier": "*"
   },
   "keywords": [
     "bpmn",
