--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          npm ci
+          npm install
 
       - name: Generate SBOM
         run: |
