--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: '>=22.14.0'
+          check-latest: true
 
       - name: Install dependencies
         env:
