--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   "scripts": {
     "test": "mocha ./test/**/*.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test:lint": "node ./lint-runner/index.js --type=bpmn --config=./.bpmnlintrc --format=html \"./bpmn-diagrams/*.bpmn\"",
+    "test:lint:debug": "VERBOSE=true node ./lint-runner/index.js --type=bpmn \"./bpmn-diagrams/*.bpmn\""
   },
   "engines": {
     "node": ">=20"
   },
   "dependencies": {
     "@BP3/bpmnlint-plugin-bpmn-rules": "npm:@bp3/bpmnlint-plugin-bpmn-rules",
-    "bpmn-moddle": "^9.0.3",
-    "bpmnlint": "^11.6.0",
-    "bpmnlint-plugin-bp3global-bpmn-rules": "npm:@BP3/bpmnlint-plugin-bpmn-rules",
+    "bpmn-moddle": "^9.0.4",
+    "bpmnlint": "^11.12.0",
+    "bpmnlint-plugin-camunda-compat": "^2.48.1",
     "bpmnlint-utils": "^1.1.1",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.5",
@@ -26,10 +28,9 @@
     "dmnlint": "^0.2.0",
     "dmnlint-utils": "^0.1.0",
     "junit-report-builder": "^5.1.1",
-    "semver": "^7.7.2",
     "tiny-glob": "^0.2.9",
     "yargs": "^18.0.0",
-    "zeebe-bpmn-moddle": "^1.11.0"
+    "zeebe-bpmn-moddle": "^1.12.0"
   },
   "devDependencies": {
     "chai": "^6.2.1",
