--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -27,15 +27,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
-          node-version: '22'
+          node-version: '>=22.14.0'
+          check-latest: true
 
       - name: Install dependencies
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          npm ci
+          npm install
 
       - name: Generate SBOM
         run: |
