--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "node": ">=20"
   },
   "dependencies": {
+    "bp3-dynamic-rules": "file:bp3-dynamic-rules",
+    "bpmnlint-plugin-bp3-dynamic-rules": "file:bp3-dynamic-rules",
     "bpmn-moddle": "^9.0.3",
     "bpmnlint": "^11.6.0",
     "bpmnlint-utils": "^1.1.1",
