--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "scripts": {
     "test": "mocha ./test/**/*.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test:lint": "node ./lint-runner.js --type=bpmn --config=./.bpmnlintrc --format=html \"**/*.bpmn\"",
+    "test:lint:debug": "VERBOSE=true node ./lint-runner.js --type=bpmn \"**/*.bpmn\""
   },
   "engines": {
     "node": ">=20"
   },
   "dependencies": {
-    "bpmn-moddle": "^9.0.3",
-    "bpmnlint": "^11.6.0",
+    "bpmn-moddle": "^9.0.4",
+    "bpmnlint": "^11.12.0",
     "bpmnlint-utils": "^1.1.1",
     "chalk": "^4.1.2",
     "dmn-moddle": "^11.0.0",
